# Proton-Collisions-with-Pythia-Geant4

./: Pythia  README.md
Geant4/: CMakeLists.txt  exampleB1.cc  run3.mac
Geant4/include/: DetectorConstruction.hh  EventAction.hh  Materials.hh  PrimaryGeneratorAction.hh  SteppingAction.hh  TrackingAction.hh
Geant4/src/: ActionInitialization.cc  RunAction.cc  SteppingAction.cc  Trajectory.cc  TrajectoryPoint.cc  UserTrackInformation.cc
Pythia/: Pythia
include/: ActionInitialization.hh  RunAction.hh  Trajectory.hh  TrajectoryPoint.hh  UserTrackInformation.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Materials.cc  PrimaryGeneratorAction.cc  TrackingAction.cc
